# 3DEM_GV

./: .gitignore
.github/agents/: Agente_SI.agent.md  Agente_Sviluppo_Codice_per_3D_Design.agent.md  Agente_Sviluppo_simulazione_FEM.agent.md  SCRAM_MAster.agent.md
native-app/: CMakeLists.txt  CMakePresets.json  README.md
native-app/src/: FemCoreBridge.cpp  FemCoreBridge.h  MainWindow.cpp  MainWindow.h  SimulationConfig.h  ViewportWidget.cpp  ViewportWidget.h  main.cpp
ui-prototype/: app.js  index.html  styles.css
